<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.archimatetool</groupId>
    <artifactId>archi</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>Archi Tool</name>

    <properties>
        <revision>4.10.0-SNAPSHOT</revision>
        <tycho-version>2.7.4</tycho-version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    
    <repositories>
        <repository>
            <id>Eclipse</id>
            <layout>p2</layout>
            <url>https://download.eclipse.org/eclipse/updates/4.23</url>
        </repository>
    </repositories>

    <!--Core modules -->
    <modules>
        <module>com.archimatetool.canvas</module>
        <module>com.archimatetool.commandline</module>
        <module>com.archimatetool.csv</module>
        <module>com.archimatetool.csv.commandline</module>
        <module>com.archimatetool.eclipse.feature</module>
        <module>com.archimatetool.editor</module>
        <module>com.archimatetool.editor.browser</module>
        <module>com.archimatetool.editor.feature</module>
        <module>com.archimatetool.editor.launch.win32</module>
        <module>com.archimatetool.editor.themes</module>
        <module>com.archimatetool.export.svg</module>
        <module>com.archimatetool.gef.feature</module>
        <module>com.archimatetool.hammer</module>
        <module>com.archimatetool.help</module>
        <module>com.archimatetool.jasperreports</module>
        <module>com.archimatetool.jasperreports.commandline</module>
        <module>com.archimatetool.jdom</module>
        <module>com.archimatetool.model</module>
        <module>com.archimatetool.modelimporter</module>
        <module>com.archimatetool.modelimporter.commandline</module>
        <module>com.archimatetool.reports</module>
        <module>com.archimatetool.reports.commandline</module>
        <module>com.archimatetool.templates</module>
        <module>com.archimatetool.widgets</module>
        <module>com.archimatetool.zest</module>
        <module>org.eclipse.draw2d</module>
        <module>org.eclipse.gef</module>
        <module>org.eclipse.zest.core</module>
        <module>org.eclipse.zest.layouts</module>
        <module>org.opengroup.archimate.xmlexchange</module>
        <module>org.opengroup.archimate.xmlexchange.commandline</module>
    </modules>

    <profiles>
        <!-- Profile for tests, active by default -->
        <profile>
            <id>tests</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>tests</module>
            </modules>
        </profile>
        
        <!-- Profile for creating a product build, not active by default -->
        <!-- Use "mvn clean package -P product" to create products but not run tests -->
        <profile>
            <id>product</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>com.archimatetool.editor.product</module>
            </modules>
        </profile>
    </profiles>

    <build>
        <sourceDirectory>src</sourceDirectory>
        
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho-version}</version>
                <extensions>true</extensions>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-packaging-plugin</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <!-- Replace the "-SNAPSHOT" version when generating jars -->
                    <finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
                    <!-- Don't add pom.xml and pom.properties files to META-INF folder  -->
                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <environments>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>aarch64</arch>
                        </environment>
                    </environments>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-compiler-plugin</artifactId>
                    <version>${tycho-version}</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <useProjectSettings>false</useProjectSettings>
                    </configuration>
                </plugin>
                
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <encoding>ISO-8859-1</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

</project>
